Java 25 Upgrade